# coinmarketcap-python-sample

./: Dockerfile  README.md  calculate_prices.py  convert_symbols_list_to_string.py  crypto.json  current_quoted_prices.py  grab_each_currencies_in_api.py  grab_each_portfolio_id_in_local.py  grab_each_symbol_unit_from_pair.py  grab_each_symbols_in_api.py  grab_symbol_unit_belonging_to_portfolio_id.py  main.py  pyproject.toml  read_local_json_file.py  requirements.txt  sample.json  save_to_json_data_file.py  settings.json  validate_api_key_connections.py  validate_currencies_with_api.py  validate_fiat_currency.py  validate_portfolio_exist.py  validate_portfolio_id.py  validate_symbols_units.py  validate_symbols_with_api.py
.scannerwork/: report-task.txt
