[tool.poetry]
name = "coinmarketcap-python-public-sample"
version = "0.1.0"
description = ""
authors = ["Brandon Chuah <brandoncclwork@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2023.7.22"
charset-normalizer = "3.0.1"
colorama = "0.4.6"
defusedxml = "0.7.1"
httpie = "3.2.1"
idna = "3.4"
markdown-it-py = "2.2.0"
mdurl = "0.1.2"
Pygments = "2.15.0"
pyotp = "2.8.0"
PySocks = "1.7.1"
requests = "2.31.0"
requests-toolbelt = "0.10.1"
rich = "13.3.1"
urllib3 = "1.26.19"
multidict = "^6.0.5"
black = "^24.4.2"
pylint = "^3.2.2"
pytest = "^8.2.1"
flake8 = "^7.0.0"
flake8-annotations-complexity = "^0.0.8"
flake8-black = "^0.3.6"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^23.0.0"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-datetimez = "^20.10.0"
flake8-eradicate = "^1.4.0"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^6.0.0"
flake8-loopy = "^1.1.0"
flake8-patch = "^0.1.0"
flake8-pie = "^0.16.0"
flake8-pytest-style = "^1.7.2"
flake8-raise = "^0.0.5"
flake8-requirements = "^1.7.7"
flake8-sleep = "^0.0.1"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"